hphp/test/zend/good/ext/mysqli/tests/mysqli_stmt_send_long_data_packet_size_libmysql.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

if (stristr(mysqli_get_client_info(), 'mysqlnd'))
	die("skip: test for libmysql");
?>