hphp/test/zend/bad/ext/xml/tests/bug26614_libxml.php.skipif
<?php 
require_once("skipif.inc");
if (!defined("LIBXML_VERSION")) die('skip libxml2 test'); 
?>